resources/rancher-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  labels:
    name: rancher-ingress
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "rancher.kub3.dev"
    secretName: rancher-letsencrypt-cert
  rules:
  - host: rancher.kub3.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rancher
            port: 
              number: 80
