resources/sonarqube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  labels:
    name: sonarqube-ingress
  namespace: sonarqube
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "sonarqube.kub3.dev"
    secretName: sonarqube-letsencrypt-crt
  rules:
  - host: sonarqube.kub3.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sonarqube-sonarqube
            port: 
              number: 9000
